# authrio

./: Cargo.toml
.github/workflows/: tests.yml
migrations/auth/: up.sql
migrations/extauth/: drop.sql  up.sql
migrations/oauth/: up.sql
migrations/org/: down.sql  up.sql
migrations/provider/: down.sql  up.sql
migrations/simple/: down.sql  up.sql
migrations/simple_auth/: down.sql  up.sql
migrations/user/: up.sql
migrations/user_basic/: down.sql  up.sql
migrations/user_provider/: down.sql  up.sql
migrations/users/: up.sql
src/: auth_result.rs  config.rs  crypto.rs  flows.rs  main.rs  schemas.rs
src/models/: authext.rs  extauth.rs  mod.rs  org.rs  provider.rs  simple.rs  simple_auth.rs  user.rs  user_basic.rs  user_provider.rs
src/routes/: base.rs  mod.rs  org.rs  user_provider.rs
