[package]
name = "authrio"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13"
rust-argon2 = "0.8"
dotenv = "0.15"
rand = "0.8"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid" ] }
actix-web = "3"
actix-web-httpauth = "0.5"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
